# Glamdring

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  types.rs
src/lexer/: js_lexer.rs  lexer.rs  mod.rs  ts_lexer.rs
src/parser/: ast.rs
src/util/: cli.rs  mod.rs  stats.rs
test/: mod.rs
